--- a/trunk/app/templates/home.html
+++ b/trunk/app/templates/home.html
@@ -1,8 +1,8 @@
 {% extends "pages.html" %}
-{% block subTitle %}A URL Shortening Service{% endblock %}
+{% block subTitle %}A Link Shortening Service{% endblock %}
 {% block pagebody %}
 <a target="_top" href="/"><img title="G02.ME" class="logo" src="/images/logo.png"></a>
-<h1 style="padding-top: 30px;">A URL Shortening Service</h1>
+<h1 style="padding-top: 30px;">A Link Shortening Service</h1>
 <p class="subhead">Shorten, Share, and Comment - then see what others are doing</p>
 
 <div class="left">
@@ -16,15 +16,15 @@
 
 <h2>What is G02.ME?</h2>
 <ul>
-	<li><b>Free</b> - G02.ME is free URL shortening service - use it to turn any URL into a short one.</li>
-	<li><b>Short</b> - G02.ME URL's are only 16 characters long <i>(for comparison, tinyurl URL's are 25 characters long)</i> -
+	<li><b>Free</b> - G02.ME is free hyperlink shortening service - use it to turn any link into a short one.</li>
+	<li><b>Short</b> - G02.ME links are only 16 characters long <i>(for comparison, tinyurl links are 25 characters long)</i> -
 	perfect for embedding in <a href="http://twitter.com">Twitter</a> or IM messages
 	(e.g., <a href="http://g02.me/G">http://g02.me/G</a>)
 	</li>
 	<li><b>Comments</b> - Exchange comments at the top of any shared G02.ME page.</li>
 	<li><b>Analytics</b> - Each G02.ME page displays the number of viewers	so you can see how often your link has been viewed.</li>
-	<li><b>Personalized</b> - Pick a username, and use it with all your comments.  You can then get a summary of all your most recently shared pages.</li>
-	<li><b>Tags</b> - Add a tag, and then click on the tag link to see the most popular URL's for that tag -
+	<li><b>Personalized</b> - Pick a username, and use it with all your comments.  You can then get a summary of all your most recently shared links.</li>
+	<li><b>Tags</b> - Add a tag, and then click on the tag link to see the most popular links for that tag -
 	it's a great way to find out what others are sharing.</li>
 </ul>
 
@@ -48,7 +48,7 @@ alt="Powered by Google App Engine" /></a>
 </div> <!-- left -->
 
 <div class="right">
-<h2>Recently popular pages</h2>
+<h2>Recently popular links</h2>
 <p class="subhead">{{total_pages}} pages shared to date.</p>
 <table class="scores">
 <tr><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th>Created</th></tr>
