--- a/trunk/app/templates/tag.html
+++ b/trunk/app/templates/tag.html
@@ -2,7 +2,7 @@
 {% block subTitle %}{{tag}} pages{% endblock %}
 {% block pagebody %}
 <a target="_top" href="/" title="G02.ME Home | Popular Pages"><img class="logo" src="/images/logo.png"></a>
-<h1 style="padding-top: 40px;">{{tag}} pages</h1>
+<h1 style="padding-top: 40px;">{{tag}} links</h1>
 <div style='clear:both;'></div>
 <table class="scores">
 <tr><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th>Created</th></tr>
