--- a/trunk/app/templates/home.html
+++ b/trunk/app/templates/home.html
@@ -63,7 +63,11 @@ alt="Powered by Google App Engine" /></a>
 		<td class="num">{{page.model.shareCount}}</td>
 		<td class="num">{{page.model.viewCount}}</td>
 		<td class="num">{{page.model.CommentCount}}</td>
-		<td class="age">{{page.model.Age}}</td>
+		<td class="age">{{page.model.Age}}
+			{% if page.model.Creator %}
+				<br/>by <a href="/user/{{page.model.Creator}}">{{page.model.Creator}}</a>
+			{% endif %}
+		</td>
 	</tr>
 	{% endif %}
 {% endfor %}
