--- a/trunk/app/templates/404.html
+++ b/trunk/app/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
 {% block body %}
-<a target="_top" href="/"><img title="G02.ME" class="logo" src="/images/logo.png"></a>
+<a target="_top" href="/"><img title="{{site_name}}" class="logo" src="/images/logo.png"></a>
 <h2>Page not found.</h2>
 {% endblock %}
