--- a/trunk/app/templates/admin.html
+++ b/trunk/app/templates/admin.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="page">
 
-<a target="_top" href="/"><img title="G02.ME" class="logo" src="/images/logo.png"></a>
+<a target="_top" href="/"><img title="{{site_name}}" class="logo" src="/images/logo.png"></a>
 <h1 style="padding-top: 40px;">Community URL Sharing Service</h1>
 
 
