--- a/trunk/app/templates/head.html
+++ b/trunk/app/templates/head.html
@@ -50,7 +50,7 @@ window.onclick = Click;
 </div> <!-- info-status -->
 
 <div id="info-body">
-<a target="_top" href="/" title="G02.ME Home | Popular Pages"><img class="logo-small" src="/images/logo-small.png"></a>
+<a target="_top" href="/" title="{{site_name}} Home | Popular Pages"><img class="logo-small" src="/images/logo-small.png"></a>
 <h1><a target="_top" href="{{map.Href}}" title="{{map.url|escape}}">{{map.title|escape}}</a></h1>
 <p class="url">{{map.url|escape}}</p>
 
