--- a/trunk/app/templates/master.html
+++ b/trunk/app/templates/master.html
@@ -4,11 +4,12 @@
 <meta http-equiv="Expires" content="0"/>
 <link rel="stylesheet" type="text/css" href="/styles/main.css"/>
 <link rel="icon" type="image/png" href="/images/favicon.png">
-<title>G02.ME - {% block subTitle %}{% endblock %}</title>
+<script src="/scripts/g02me.js"></script>
+<title>{{site_name}} - {% block subTitle %}{% endblock %}</title>
 {% block head %}
 <script>
 function Loaded() {}
-</script
+</script>
 {% endblock %}
 </head>
 
@@ -33,7 +34,10 @@ var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "htt
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-5439059-1");
+var pageTracker = _gat._getTracker("{{analytics_code}}");
+pageTracker._addIgnoredOrganic("{{site_host}}")
+pageTracker._addIgnoredOrganic("go2.me")
+{% if username %}pageTracker._setVar("username"){% endif %}
 pageTracker._trackPageview();
 </script>
 {% endblock %}
