--- a/tags/prodo_8/app/go2me/templates/master.html
+++ b/tags/prodo_8/app/go2me/templates/master.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
+<title>{{site_name}} - {% block subTitle %}{% endblock %}</title>
 <meta http-equiv="Expires" content="0"/>
+
 <link rel="stylesheet" type="text/css" href="/styles/main.css"/>
 <link rel="icon" type="image/png" href="/images/favicon.png">
+
 <script src="/scripts/g02me.js"></script>
-<title>{{site_name}} - {% block subTitle %}{% endblock %}</title>
+<script src="http://www.google.com/jsapi"></script>
+
 <script>
+google.load("jquery", "1.2.6");
+//google.load("jqueryui", "1.5.2");
 {% block script %}
 Go2.SetCSRF("{{csrf}}");
 function Loaded() {}
 {% endblock %}
 </script>
+
 </head>
 
 <body onload="Loaded();">
