--- a/tags/prodo_8/app/go2me/templates/tag.html
+++ b/tags/prodo_8/app/go2me/templates/tag.html
@@ -1,12 +1,13 @@
 {% extends "pages.html" %}
 {% load humanize %}
+{% load custom %}
 {% block subTitle %}{{tag}} links{% endblock %}
 {% block pagebody %}
 <a target="_top" href="/" title="{{site_name}} Home | Popular Pages"><img class="logo" src="/images/logo.png"></a>
 <h1 style="padding-top: 40px;">{{tag}} links</h1>
 <div style='clear:both;'></div>
 <table class="scores">
-<tr><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th>Created</th></tr>
+<tr><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th>Created</th><th>Score</th></tr>
 {% for page in pages %}
 	{% if page.ModelExists %}
 	<tr>
@@ -14,11 +15,13 @@
 		<td class="num">{{page.model.shareCount|intcomma}}</td>
 		<td class="num">{{page.model.viewCount|intcomma}}</td>
 		<td class="num">{{page.model.CommentCount|intcomma}}</td>
-		<td class="age">{{page.model.Age}}
+		<td class="age">{{page.model.dateCreated|Age}}
 			{% if page.model.Creator %}
 				by <a href="/user/{{page.model.Creator}}">{{page.model.Creator}}</a>
 			{% endif %}
 		</td>
+		<td class="bar"><div class="bar" bar_value="{{page.ScoreNow|mult:24|floatformat:1}}"
+			title="{{page.ScoreNow|mult:24|floatformat:1}} points per day">&nbsp;</div></td>
 	</tr>
 	{% endif %}
 {% endfor %}
