--- a/tags/prodo_8/app/go2me/templates/user.html
+++ b/tags/prodo_8/app/go2me/templates/user.html
@@ -1,5 +1,6 @@
 {% extends "pages.html" %}
 {% load humanize %}
+{% load custom %}
 {% block subTitle %}{{usernamePage}}'s activity{% endblock %}
 {% block pagebody %}
 <div class="page">
@@ -7,7 +8,7 @@
 <h1 style="padding-top: 40px;">{{usernamePage}}'s activity</h1>
 <div style='clear:both;'></div>
 <table class="scores">
-<tr><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th>Created</th></tr>
+<tr><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th>Created</th><th>Scores</th></tr>
 {% for comment in comments %}
 	<tr>
 		<td><a href="/{{comment.map.GetId}}" title="{{comment.map.url|escape}}">{{comment.map.title|escape}}</a>
@@ -16,18 +17,20 @@
 			{% if comment.tags %}
 	    		[{% for tag in comment.TagList %}<a target="_top" href="/tag/{{tag}}">{{tag|escape}}</a>{% if not forloop.last %}, {% endif %}{% endfor %}]
 	    	{% endif %}
-	    	- <i>{{ comment.Age }}</i>
+	    	- <i>{{ comment.dateCreated|Age }}</i>
 	    	</p></div>
 	    {% endif %}
 		</td>
 		<td class="num">{{comment.map.shareCount|intcomma}}</td>
 		<td class="num">{{comment.map.viewCount|intcomma}}</td>
 		<td class="num">{{comment.map.CommentCount|intcomma}}</td>
-		<td class="age">{{comment.map.Age}}
+		<td class="age">{{comment.map.dateCreated|Age}}
 			{% if comment.map.Creator %}
 				by <a href="/user/{{comment.map.Creator}}">{{comment.map.Creator}}</a>
 			{% endif %}
 		</td>
+		<td class="bar"><div class="bar" bar_value="{{comment.map.ScoresNamed.day|mult:24|floatformat:1}}"
+			title="{{comment.map.ScoresNamed.day|mult:24|floatformat:1}} points per day">&nbsp;</div></td>
 	</tr>
 {% endfor %}
 </table>
